[gd_scene load_steps=5 format=4 uid="uid://bgn2nry857s5x"]

[ext_resource type="Script" uid="uid://ddtpj80rxs8rb" path="res://src/demo/nurikabe/solver/demo_solver.gd" id="1_hjsai"]
[ext_resource type="PackedScene" uid="uid://b06aw2k2o1thk" path="res://src/main/nurikabe/game_board.tscn" id="2_gilm6"]
[ext_resource type="FontFile" uid="uid://pq4x38hcbx4h" path="res://assets/main/ui/baloo2.ttf" id="3_jvtrg"]
[ext_resource type="PackedScene" uid="uid://h73338s4fipn" path="res://src/demo/nurikabe/solver/command_palette.tscn" id="4_l4fyy"]

[node name="Demo" type="Node"]
script = ExtResource("1_hjsai")
puzzle_path = "res://assets/demo/nurikabe/puzzles/nikoli/62.txt"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameBoardHolder" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GameBoard" parent="HBoxContainer/GameBoardHolder" instance=ExtResource("2_gilm6")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -585.0
offset_right = -440.0
offset_bottom = -585.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 6
size_flags_vertical = 4
grid_string = "                    
     4              
                    
         2          
       3         6  
 5                  
                    
     5         7    
                   4
         4          
                   3
             8      
           2     2  
                    
     4              
11     7       4    
                    
                 4  
"

[node name="TileMapGround" parent="HBoxContainer/GameBoardHolder/GameBoard" index="0"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAQAAAAAAAAACAAAAAAAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAAAAAAAAAAACAAEAAQAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAQAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAQAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAQAAAAAAAAACAAIAAAAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAQAAAAAAAAAGAAIAAAAAAAAAAAAHAAIAAQAAAAAAAAAIAAIAAAAAAAAAAAAJAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAABAAMAAAAAAAAAAAACAAMAAQAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAQAAAAAAAAAFAAMAAAAAAAAAAAAGAAMAAQAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAQAAAAAAAAAJAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAQAAAAAAAAACAAQAAAAAAAAAAAADAAQAAQAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAQAAAAAAAAAGAAQAAAAAAAAAAAAHAAQAAQAAAAAAAAAIAAQAAAAAAAAAAAAJAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAABAAUAAAAAAAAAAAACAAUAAQAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAQAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAQAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAQAAAAAAAAAJAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAQAAAAAAAAACAAYAAAAAAAAAAAADAAYAAQAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAQAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAQAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAABAAcAAAAAAAAAAAACAAcAAQAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAQAAAAAAAAAFAAcAAAAAAAAAAAAGAAcAAQAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAQAAAAAAAAAJAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAQAAAAAAAAACAAgAAAAAAAAAAAADAAgAAQAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAQAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAQAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAkAAAAAAAAAAAACAAkAAQAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAQAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAQAAAAAAAAAHAAkAAAAAAAAAAAAIAAkAAQAAAAAAAAAJAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAoAAQAAAAAAAAACAAoAAAAAAAAAAAADAAoAAQAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAQAAAAAAAAAGAAoAAAAAAAAAAAAHAAoAAQAAAAAAAAAIAAoAAAAAAAAAAAAJAAoAAQAAAAAAAAAAAAsAAQAAAAAAAAABAAsAAAAAAAAAAAACAAsAAQAAAAAAAAADAAsAAAAAAAAAAAAEAAsAAQAAAAAAAAAFAAsAAAAAAAAAAAAGAAsAAQAAAAAAAAAHAAsAAAAAAAAAAAAIAAsAAQAAAAAAAAAJAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAABAAwAAQAAAAAAAAACAAwAAAAAAAAAAAADAAwAAQAAAAAAAAAEAAwAAAAAAAAAAAAFAAwAAQAAAAAAAAAGAAwAAAAAAAAAAAAHAAwAAQAAAAAAAAAIAAwAAAAAAAAAAAAJAAwAAQAAAAAAAAAAAA0AAQAAAAAAAAABAA0AAAAAAAAAAAACAA0AAQAAAAAAAAADAA0AAAAAAAAAAAAEAA0AAQAAAAAAAAAFAA0AAAAAAAAAAAAGAA0AAQAAAAAAAAAHAA0AAAAAAAAAAAAIAA0AAQAAAAAAAAAJAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAABAA4AAQAAAAAAAAACAA4AAAAAAAAAAAADAA4AAQAAAAAAAAAEAA4AAAAAAAAAAAAFAA4AAQAAAAAAAAAGAA4AAAAAAAAAAAAHAA4AAQAAAAAAAAAIAA4AAAAAAAAAAAAJAA4AAQAAAAAAAAAAAA8AAQAAAAAAAAABAA8AAAAAAAAAAAACAA8AAQAAAAAAAAADAA8AAAAAAAAAAAAEAA8AAQAAAAAAAAAFAA8AAAAAAAAAAAAGAA8AAQAAAAAAAAAHAA8AAAAAAAAAAAAIAA8AAQAAAAAAAAAJAA8AAAAAAAAAAAAAABAAAAAAAAAAAAABABAAAQAAAAAAAAACABAAAAAAAAAAAAADABAAAQAAAAAAAAAEABAAAAAAAAAAAAAFABAAAQAAAAAAAAAGABAAAAAAAAAAAAAHABAAAQAAAAAAAAAIABAAAAAAAAAAAAAJABAAAQAAAAAAAAAAABEAAQAAAAAAAAABABEAAAAAAAAAAAACABEAAQAAAAAAAAADABEAAAAAAAAAAAAEABEAAQAAAAAAAAAFABEAAAAAAAAAAAAGABEAAQAAAAAAAAAHABEAAAAAAAAAAAAIABEAAQAAAAAAAAAJABEAAAAAAAAAAAA=")

[node name="TileMapClue" parent="HBoxContainer/GameBoardHolder/GameBoard" index="3"]
clues_by_cell = Dictionary[Vector2i, int]({
Vector2i(0, 5): 5,
Vector2i(0, 15): 11,
Vector2i(2, 1): 4,
Vector2i(2, 7): 5,
Vector2i(2, 14): 4,
Vector2i(3, 4): 3,
Vector2i(3, 15): 7,
Vector2i(4, 3): 2,
Vector2i(4, 9): 4,
Vector2i(5, 12): 2,
Vector2i(6, 11): 8,
Vector2i(7, 7): 7,
Vector2i(7, 15): 4,
Vector2i(8, 4): 6,
Vector2i(8, 12): 2,
Vector2i(8, 17): 4,
Vector2i(9, 8): 4,
Vector2i(9, 10): 3
})

[node name="CursorableArea" parent="HBoxContainer/GameBoardHolder/GameBoard" index="5"]
cursorable_rect = Rect2(0, 0, 2560, 4608)

[node name="MessageLabel" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
theme_override_fonts/normal_font = ExtResource("3_jvtrg")
theme_override_font_sizes/normal_font_size = 32
scroll_following = true
selection_enabled = true

[node name="PerformanceSuiteTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25

[node name="CommandPalette" parent="." instance=ExtResource("4_l4fyy")]
unique_name_in_owner = true

[connection signal="timeout" from="PerformanceSuiteTimer" to="." method="_on_performance_suite_timer_timeout"]
[connection signal="command_entered" from="CommandPalette" to="." method="_on_command_palette_command_entered"]

[editable path="HBoxContainer/GameBoardHolder/GameBoard"]
